size = scalable
actioniconsdir = $(pkgdatadir)/icons/hicolor/$(size)/actions
appiconsdir = $(datadir)/icons/hicolor/$(size)/apps

dist_appicons_DATA = \
	apps/eom.svg
dist_actionicons_DATA = \
	actions/eom-plugin.svg	  	\
	actions/eom-image-collection.svg  \
	actions/slideshow-play.svg

-include $(top_srcdir)/git.mk
